--- a/about-us.html
+++ b/about-us.html
@@ -215,7 +215,7 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#vision">Vision</a></li>
             <li><a href="#whatwedo">What We Do</a></li>
             <li><a href="#team">Our Team</a></li>
@@ -261,6 +261,11 @@
                 <h3>Tasrian Rahman Ahnaf</h3>
                 <p></p>
             </div>
+            <div class="team-member">
+                <img src="" alt="Team Member 4">
+                <h3>Abhishek</h3>
+                <p></p>
+            </div>
             <!-- Add more team members as needed -->
         </div>
     </div>
@@ -268,11 +273,11 @@
     <div class="about-section" id="join">
         <h2 class="section-title">Join Us</h2>
         <p class="content">Become part of our stellar community and start your coding journey today!</p>
-        <button class="cta">Join Now</button>
+        <a href="https://discord.gg/eWsWpXNYVY" class="cta">Join Now</a>
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
