--- a/donate.html
+++ b/donate.html
@@ -309,12 +309,12 @@ footer a:hover {
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="learn.html">Learn</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="donate.html">Donate</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/events.html">Events</a></li>
+            <li><a href="/launch.html">Learn</a></li>
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/donate.html">Donate</a></li>
         </ul>
     </nav>
 
@@ -336,12 +336,12 @@ footer a:hover {
                 <li>Host community events and meetups</li>
             </ul>
             <p class="content">Every donation, big or small, makes a difference. Thank you for your support!</p>
-            <button class="cta">Donate Now</button>
+            <a href="https://www.paypal.biz/hpeadal" class="cta">Donate Now</a>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
