--- a/events.html
+++ b/events.html
@@ -330,7 +330,7 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#upcoming-events">Upcoming Events</a></li>
             <li><a href="#event-schedule">Event Schedule</a></li>
             <li><a href="#event-highlights">Event Highlights</a></li>
@@ -349,18 +349,13 @@
         <h2>Upcoming Events</h2>
         <div class="event-list">
             <div class="event-item">
-                <h3>Event One</h3>
-                <p>A brief description of Event One. This event focuses on...</p>
+                <h3>Coming Soon</h3>
+                <p>..............</p>
                 <a href="#">Learn More</a>
             </div>
             <div class="event-item">
-                <h3>Event Two</h3>
-                <p>A brief description of Event Two. This event focuses on...</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="event-item">
-                <h3>Event Three</h3>
-                <p>A brief description of Event Three. This event focuses on...</p>
+                <h3>Coming Soon</h3>
+                <p>..............</p>
                 <a href="#">Learn More</a>
             </div>
             <!-- Add more event items as needed -->
@@ -373,22 +368,10 @@
             <h3>Upcoming Schedule</h3>
             <ul>
                 <li>
-                    <h4>Workshop on Web Development</h4>
-                    <p>Date: 25th November 2025</p>
-                    <p>Time: 10:00 AM - 4:00 PM</p>
-                    <p>Location: Online</p>
-                </li>
-                <li>
-                    <h4>AI and Machine Learning Bootcamp</h4>
-                    <p>Date: 10th December 2025</p>
-                    <p>Time: 9:00 AM - 5:00 PM</p>
-                    <p>Location: Tech Hub, City Center</p>
-                </li>
-                <li>
-                    <h4>Hackathon: Code for Good</h4>
-                    <p>Date: 15th January 2026</p>
-                    <p>Time: 8:00 AM - 8:00 PM</p>
-                    <p>Location: Innovation Lab, Downtown</p>
+                    <h4>Coming soon</h4>
+                    <p>Date: N/A</p>
+                    <p>Time: N/A</p>
+                    <p>Location: N/A</p>
                 </li>
                 <!-- Add more schedule items as needed -->
             </ul>
@@ -401,20 +384,11 @@
             <h3>Recent Highlights</h3>
             <div class="highlight-list">
                 <div class="highlight-item" onclick="showDetails('python-workshop')">
-                    <img src="path/to/python-workshop.jpg" alt="Python Workshop">
-                    <h4>Python Workshop</h4>
-                    <p>Our recent Python workshop was a huge success with over 100 participants. We covered basics to advanced topics, and participants built their own projects.</p>
+                    <img src="/path/to/python-workshop.jpg" alt="Python Workshop">
+                    <h4>N/A</h4>
+                    <p>something</p>
                 </div>
-                <div class="highlight-item" onclick="showDetails('javascript-bootcamp')">
-                    <img src="path/to/javascript-bootcamp.jpg" alt="JavaScript Bootcamp">
-                    <h4>JavaScript Bootcamp</h4>
-                    <p>The JavaScript Bootcamp was an intensive 3-day event where attendees learned about modern JavaScript frameworks and built interactive web applications.</p>
-                </div>
-                <div class="highlight-item" onclick="showDetails('annual-hackathon')">
-                    <img src="path/to/annual-hackathon.jpg" alt="Annual Hackathon">
-                    <h4>Annual Hackathon</h4>
-                    <p>The Annual Hackathon saw teams competing to solve real-world problems. The winning team developed an innovative solution for environmental monitoring.</p>
-                </div>
+                
                 <!-- Add more highlight items as needed -->
             </div>
         </div>
@@ -424,26 +398,14 @@
         <h2>Achievements</h2>
         <div class="event-list">
             <div class="event-item">
-                <h3>Achievement One</h3>
-                <p>A brief description of Achievement One. This achievement was...</p>
+                <h3>N/A</h3>
+                <p>coming soon</p>
                 <a href="#">Learn More</a>
-            </div>
-            <div class="event-item">
-                <h3>Achievement Two</h3>
-                <p>A brief description of Achievement Two. This achievement was...</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="event-item">
-                <h3>Achievement Three</h3>
-                <p>A brief description of Achievement Three. This achievement was...</p>
-                <a href="#">Learn More</a>
-            </div>
-            <!-- Add more achievement items as needed -->
-        </div>
+           
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
