--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         <ul>
             <li><a href="/projects.html">Projects</a></li>
             <li><a href="/events.html">Events</a></li>
-            <li><a href="/learn.html">Learn</a></li>
+            <li><a href="/launch.html">Learn</a></li>
             <li><a href="/about-us.html">About Us</a></li>
             <li><a href="/donate.html">Donate</a></li>
         </ul>
@@ -532,7 +532,7 @@
         <div class="hero-content">
             <h2>Unlock Your Potential Through Code</h2>
             <p>Join a community where creativity meets technology. NebuCoders is where beginners and experts come together to learn, build, and grow.</p>
-            <a href="#join" class="hero-cta"><span>Join the Community</span></a>
+            <a href="https://discord.gg/eWsWpXNYVY" class="hero-cta"><span>Join the Community</span></a>
         </div>
         <img src="/astro.png" alt="Waving Astronaut" class="astronaut">
         <img src="/logo1.png" alt="Floating Image" class="floating-image">
@@ -579,7 +579,7 @@
     <div class="sections scroll-animation" id="learn">
         <h2>Learn to Code</h2>
         <p>Explore programming languages, follow interactive projects, and find top learning resources.</p>
-        <a href="/learn.html" class="cta"><span>Start Learning</span></a>
+        <a href="/launch.html" class="cta"><span>Start Learning</span></a>
         <div class="rocket"></div>
     </div>
 
@@ -615,13 +615,13 @@
         <p>Stay connected and follow us on our social media platforms for the latest updates and events.</p>
         <a href="https://twitter.com/nebucoders" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://github.com/nebucoders" target="_blank"><i class="fa fa-github"></i></a>
-        <a href="https://discord.gg/2Gm7En2dxj" target="_blank"><i class="fa fa-discord"></i></a>
-        <a href="https://youtube.com" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="https://discord.gg/eWsWpXNYVY" target="_blank"><i class="fa fa-discord"></i></a>
+        <a href="https://linkedin.com/company/nebucoders" target="_blank"><i class="fa fa-linkedin"></i></a>
         <a href="https://instagram.com/nebucoders" target="_blank"><i class="fa fa-instagram"></i></a>
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
