--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NebuCoders | Our GitHub Projects</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/nebco.png">
+    <link rel="icon" type="image/png" href="/e:/python practice/resume projects/TheCodeNinjas/Website/nebco.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@900&display=swap');
@@ -355,7 +355,7 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#projects">Projects</a></li>
         </ul>
     </nav>
@@ -386,7 +386,7 @@
             <div class="project-item">
                 <h3>nebucders website</h3>
                 <p>Website for nebucoders</p>
-                <a href="https://github.com/your-repo/project-three" target="_blank">View on GitHub</a>
+                <a href="https://github.com/nebucoders/homewebsite" target="_blank">View on GitHub</a>
                 <p class="project-status">Status: Complete</p>
             </div>
             <!-- Add more project items as needed -->
@@ -427,7 +427,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
