--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -155,12 +155,12 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="learn.html">Learn</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="donate.html">Donate</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/events.html">Events</a></li>
+            <li><a href="/learn.html">Learn</a></li>
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/donate.html">Donate</a></li>
         </ul>
     </nav>
 
@@ -188,7 +188,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
