--- a/learn.html
+++ b/learn.html
@@ -248,7 +248,7 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#resources">Programming Languages</a></li>
             <li><a href="#interactive-projects">Interactive Projects</a></li>
             <li><a href="#top-resources">Top Learning Resources</a></li>
@@ -329,7 +329,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
