--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -125,6 +125,16 @@
             color: #45A29E;
         }
 
+        a {
+            color: #66FCF1;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #45A29E;
+        }
+
         footer {
             padding: 20px;
             text-align: center;
@@ -153,12 +163,12 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="learn.html">Learn</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="donate.html">Donate</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/events.html">Events</a></li>
+            <li><a href="/learn.html">Learn</a></li>
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/donate.html">Donate</a></li>
         </ul>
     </nav>
 
@@ -193,11 +203,11 @@
         <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on our website.</p>
 
         <h3>Contact Us</h3>
-        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:info@nebucoders.org">info@nebucoders.org</a>.</p>
+        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:nebucoders.info@gmail.com">nebucoders.info@gmail.com</a>.</p>
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
