--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/nebco.png">
+    <link rel="icon" type="image/png" href="nebco.png">
 
     
    <style>
@@ -520,11 +520,11 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/events.html">Events</a></li>
-            <li><a href="/launch.html">Learn</a></li>
-            <li><a href="/about-us.html">About Us</a></li>
-            <li><a href="/donate.html">Donate</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="launch.html">Learn</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
 
@@ -534,8 +534,8 @@
             <p>Join a community where creativity meets technology. NebuCoders is where beginners and experts come together to learn, build, and grow.</p>
             <a href="https://discord.gg/eWsWpXNYVY" class="hero-cta"><span>Join the Community</span></a>
         </div>
-        <img src="/astro.png" alt="Waving Astronaut" class="astronaut">
-        <img src="/logo1.png" alt="Floating Image" class="floating-image">
+        <img src="astro.png" alt="Waving Astronaut" class="astronaut">
+        <img src="logo1.png" alt="Floating Image" class="floating-image">
     </div>
 
     <div class="who-we-are scroll-animation">
@@ -565,28 +565,28 @@
     <div class="sections scroll-animation" id="projects">
         <h2>Our GitHub Projects</h2>
         <p>Explore and contribute to open-source projects built by our community.</p>
-        <a href="/projects.html" class="cta"><span>View Projects</span></a>
+        <a href="projects.html" class="cta"><span>View Projects</span></a>
         <div class="rocket"></div>
     </div>
 
     <div class="sections scroll-animation" id="events">
         <h2>Workshops & Achievements</h2>
         <p>Check out past workshops and upcoming events that help you level up your skills.</p>
-        <a href="/events.html" class="cta"><span>View Events</span></a>
+        <a href="events.html" class="cta"><span>View Events</span></a>
         <div class="rocket"></div>
     </div>
 
     <div class="sections scroll-animation" id="learn">
         <h2>Learn to Code</h2>
         <p>Explore programming languages, follow interactive projects, and find top learning resources.</p>
-        <a href="/launch.html" class="cta"><span>Start Learning</span></a>
+        <a href="launch.html" class="cta"><span>Start Learning</span></a>
         <div class="rocket"></div>
     </div>
 
     <div class="sections scroll-animation" id="donate">
         <h2>Support Our Community</h2>
         <p>Your contributions help us host more events, workshops, and provide resources for learning.</p>
-        <a href="/donate.html" class="cta"><span>Donate Now</span></a>
+        <a href="donate.html" class="cta"><span>Donate Now</span></a>
         <div class="rocket"></div>
     </div>
 
@@ -621,7 +621,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
