--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | NebuCoders</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/nebco.png">
+    <link rel="icon" type="image/png" href="nebco.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
@@ -215,7 +215,7 @@
             <div></div>
         </div>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#vision">Vision</a></li>
             <li><a href="#whatwedo">What We Do</a></li>
             <li><a href="#team">Our Team</a></li>
@@ -237,12 +237,12 @@
         <h2 class="section-title">The Founding Team</h2>
         <div class="team">
             <div class="team-member">
-                <img src="/adal.jpeg" alt="Team Member 1">
+                <img src="adal.jpeg" alt="Team Member 1">
                 <h3>Adal Zuhair</h3>
                 <p></p>
             </div>
             <div class="team-member">
-                <img src="/haf.jpeg" alt="Team Member 2">
+                <img src="haf.jpeg" alt="Team Member 2">
                 <h3>Mohammed Hafiz ullah</h3>
                 <p></p>
             </div>
@@ -257,7 +257,7 @@
                 <p></p>
             </div>
             <div class="team-member">
-                <img src="/tasrian.jpeg" alt="Team Member 4">
+                <img src="tasrian.jpeg" alt="Team Member 4">
                 <h3>Tasrian Rahman Ahnaf</h3>
                 <p></p>
             </div>
@@ -277,7 +277,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
