--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate | NebuCoders</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="/nebco.png">
+    <link rel="icon" type="image/png" href="nebco.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@900&display=swap');
@@ -309,12 +309,12 @@ footer a:hover {
             <div></div>
         </div>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/events.html">Events</a></li>
-            <li><a href="/launch.html">Learn</a></li>
-            <li><a href="/about-us.html">About Us</a></li>
-            <li><a href="/donate.html">Donate</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="launch.html">Learn</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
 
@@ -341,7 +341,7 @@ footer a:hover {
     </div>
 
     <footer>
-        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-service.html">Terms of Service</a></p>
+        <p>&copy; 2025 NebuCoders. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
     </footer>
 
     <script>
